--- a/client/templates/bundleEdit/bundleEdit.html
+++ b/client/templates/bundleEdit/bundleEdit.html
@@ -1,9 +1,18 @@
 <template name='productBundleEdit'>
-  <div class='container'>
+  <h3><a href="{{pathFor 'productBundles'}}"><i class="fa fa-chevron-left" aria-hidden="true"></i>Back</a></h3>
+  <div class='container text-center'>
+    <h1>Bundled Products Edit/Add Products to Bundle</h1>
     {{#with thisProduct}}
     <div class='row'>
       <h2>{{title}}</h2>
+      <p>{{description}}</p>
     </div>
+    {{> addProductsToBundle}}
     {{/with}}
   </div>
+</template>
+
+<template name='addProductsToBundle'>
+  <h2>Add Products to be part of Bundle {{title}}</h2>
+
 </template>
