--- a/client/templates/bundleEdit/bundleEdit.html
+++ b/client/templates/bundleEdit/bundleEdit.html
@@ -1,18 +1,58 @@
 <template name='productBundleEdit'>
-  <h3><a href="{{pathFor 'productBundles'}}"><i class="fa fa-chevron-left" aria-hidden="true"></i>Back</a></h3>
-  <div class='container text-center'>
-    <h1>Bundled Products Edit/Add Products to Bundle</h1>
-    {{#with thisProduct}}
-    <div class='row'>
-      <h2>{{title}}</h2>
-      <p>${{price}}</p>
+  {{#if Template.subscriptionsReady}}
+    <h3><a href="{{pathFor 'productBundles'}}"><i class="fa fa-chevron-left" aria-hidden="true"></i>Back</a></h3>
+    <div class='container text-center'>
+      <h1>Bundled Products Edit/Add Products to Bundle</h1>
+      {{#with bundleVariant}}
+        <div class='row'>
+          <h2>{{title}}</h2>
+          <p>${{price}}</p>
+        </div>
+        {{#if productsAddedToBundle}}
+          <div class='row'>
+            <h2>Products In this Bundle</h2>
+          </div>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Product</th>
+                <th>Variants</th>
+                <th>Label</th>
+              </tr>
+            </thead>
+            <tbody class='text-left'>
+            {{#each productsInBundle}}
+              <tr>
+                <td>
+                  <button data-product-id='{{productId}}' class='deleteProduct btn btn-default'>Delete Product</button>
+                </td>
+                <td>{{details productId 'title'}}</td>
+                <td>
+                  {{#each variant in variantIds}}
+                    <p>{{details variant 'size'}} - {{details variant 'title'}}</p>
+                  {{/each}}
+                </td>
+                <td>{{label}}</td>
+              </tr>
+            {{/each}}
+
+            </tbody>
+          </table>
+        {{/if}}
+        <div class='row'>
+          {{> addProductsToBundle}}
+        </div>
+        <br>
+        <br>
+        <h3>Remove This Bundle Permanently</h3>
+        <div class='row'>
+          <button  class='btn btn-block btn-danger deleleBundle'>Delete This Bundle</button>
+
+        </div>
+      {{/with}}
     </div>
-    <div class='row'>
-      <h2>Products In this Bundle</h2>
-    </div>
-    {{> addProductsToBundle}}
-    {{/with}}
-  </div>
+  {{/if}}
 </template>
 
 <template name='addProductsToBundle'>
