now you can delete a full bundle too

--- a/client/templates/bundleEdit/bundleEdit.html
+++ b/client/templates/bundleEdit/bundleEdit.html
@@ -47,8 +47,7 @@
         <br>
         <h3>Remove This Bundle Permanently</h3>
         <div class='row'>
-          <button  class='btn btn-block btn-danger deleleBundle'>Delete This Bundle</button>
-
+          <button  class='btn btn-block btn-danger deleteBundle'>Delete This Bundle</button>
         </div>
       {{/with}}
     </div>
