added price buckets and commented out datepicker

--- a/client/templates/datepicker/datepicker.html
+++ b/client/templates/datepicker/datepicker.html
@@ -1,4 +1,4 @@
-<template name="bundleReservationDatepicker">
+<!-- <template name="bundleReservationDatepicker">
   <div class="col-sm-12">
     <div id="datepicker" class="form-group form-group-lg input-group date">
       <input type="text" class="form-control start" style="height: 0; margin: 0; padding: 0; border: 0;" id="rental-start" name="start" placeholder="Select Arrival Date" value={{startDate}} />
@@ -9,3 +9,4 @@
     </div>
   </div>
 </template>
+ -->
