--- a/client/templates/dashboard/dashboard.html
+++ b/client/templates/dashboard/dashboard.html
@@ -75,6 +75,23 @@
           </div>
         </div>
       </div>
+      <hr>
+      <form class='priceBucket form-inline'>
+        <div class='form-group'>
+          <label for="timeUnit">Time Unit</label>
+          <input class="form-control" value="days" name='timeUnit' id='timeUnit'>
+        </div>
+        <div class='form-group'>
+          <label for="duration">Duration</label>
+          <input type="number" class="form-control" value="6" name='duration' id='duration'>
+        </div>
+        <div class='form-group'>
+          <label for="bucketPrice">Price in $</label>
+          <input type='number' step='0.01' value='0.00' placeholder='0.00' class="form-control" name='bucketPrice' id='bucketPrice'>
+        </div>
+        <button type='submit' class='btn btn-default'>Add Price Bucket</button>
+      </form>
+      <br>
       <div class='row'>
         <button  class='btn btn-block btn-default'>Submit</button>
 
